[gd_scene load_steps=13 format=3 uid="uid://bqbvopn513dor"]

[ext_resource type="Script" path="res://scripts/enemy_card_ui.gd" id="1_ylwdv"]
[ext_resource type="Texture2D" uid="uid://ct3svyog0r8cu" path="res://art/characters/fox_mage_NOBG.png" id="3_4ji6s"]
[ext_resource type="Texture2D" uid="uid://c10aaqssq7q8l" path="res://art/environment/city_tree_wall_CARDBACK.png" id="4_37woe"]
[ext_resource type="Texture2D" uid="uid://dnppeabjw7loc" path="res://art/characters/frog_fighter_nobg_scuffed_big.png" id="4_q3fpf"]
[ext_resource type="Texture2D" uid="uid://nh64ty041s11" path="res://art/icons/sword.png" id="5_gl6s8"]
[ext_resource type="Texture2D" uid="uid://dvu36g2o3dvrn" path="res://art/icons/suit_hearts.png" id="6_cpabm"]
[ext_resource type="Texture2D" uid="uid://578mbbm1leec" path="res://art/icons/flask_full.png" id="6_ee611"]
[ext_resource type="Texture2D" uid="uid://udjb713ye5yi" path="res://art/icons/shield.png" id="7_cgdsm"]
[ext_resource type="Texture2D" uid="uid://nynxhquiwfoo" path="res://art/icons/fire.png" id="8_520w1"]
[ext_resource type="Texture2D" uid="uid://d3utf661mmube" path="res://art/icons/icon.svg" id="10_f7txy"]

[sub_resource type="LabelSettings" id="LabelSettings_evbm7"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yvgcy"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="EnemyCardUI" type="Control"]
custom_minimum_size = Vector2(200, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1720.0
offset_bottom = -780.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ylwdv")

[node name="ECardColor" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 300)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.388386, 0.0940692, 0.114999, 1)

[node name="EInPlayTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 193.0
offset_bottom = 282.0
texture = ExtResource("3_4ji6s")
expand_mode = 1
stretch_mode = 4

[node name="EInGYTexture" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(30, 45)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 55.0
mouse_filter = 2
texture = ExtResource("4_q3fpf")
expand_mode = 1
stretch_mode = 4

[node name="InGYLabel" type="Label" parent="EInGYTexture"]
layout_mode = 0
offset_left = 35.0
offset_top = -1.0
offset_right = 162.0
offset_bottom = 40.0
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.356863, 1, 1)
theme_override_font_sizes/font_size = 24
text = "test"
vertical_alignment = 1

[node name="StrengthIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 239.0
offset_right = 62.0
offset_bottom = 299.0
texture = ExtResource("5_gl6s8")
expand_mode = 1

[node name="HealthIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 241.0
offset_right = 198.0
offset_bottom = 301.0
texture = ExtResource("6_cpabm")
expand_mode = 1

[node name="StrengthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 232.0
offset_right = 66.0
offset_bottom = 300.0
text = "str"
label_settings = SubResource("LabelSettings_evbm7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 234.0
offset_right = 200.0
offset_bottom = 302.0
text = "hp"
label_settings = SubResource("LabelSettings_evbm7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SEIcon1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 71.0
offset_bottom = 69.0
texture = ExtResource("6_ee611")
expand_mode = 1

[node name="SELabel1" type="Label" parent="SEIcon1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "99"
label_settings = SubResource("LabelSettings_yvgcy")
horizontal_alignment = 1
vertical_alignment = 2

[node name="SEIcon2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 71.0
offset_right = 69.0
offset_bottom = 131.0
texture = ExtResource("7_cgdsm")
expand_mode = 1

[node name="SELabel2" type="Label" parent="SEIcon2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "99"
label_settings = SubResource("LabelSettings_yvgcy")
horizontal_alignment = 1
vertical_alignment = 2

[node name="SEIcon3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 134.0
offset_right = 69.0
offset_bottom = 194.0
texture = ExtResource("8_520w1")
expand_mode = 1

[node name="SELabel3" type="Label" parent="SEIcon3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "99"
label_settings = SubResource("LabelSettings_yvgcy")
horizontal_alignment = 1
vertical_alignment = 2

[node name="EInHandTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_37woe")
expand_mode = 1
stretch_mode = 4
flip_v = true

[node name="BadEffectVBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(70, 240)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_bottom = 240.0
grow_horizontal = 0

[node name="DescriptionBG" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = 219.0
offset_right = 279.0
offset_bottom = 411.0
color = Color(0, 0.130404, 0, 1)

[node name="DescriptionText" type="RichTextLabel" parent="DescriptionBG"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 1.0
offset_right = 280.0
offset_bottom = 193.0
text = "Description Description Description Description Description Description Description Description Description Description "

[node name="CommandTexture" type="TextureRect" parent="DescriptionBG"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = -218.0
offset_right = 280.0
texture = ExtResource("10_f7txy")
